--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
+<!--
+   Root HTML File of the Application
+   - This file serves as the entry point for the React application.
+   - It includes metadata, the root element for rendering React components, and the main script.
+-->
+
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Character encoding for the document -->
     <meta charset="UTF-8" />
+
+    <!-- Favicon (Icon displayed in browser tab) -->
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- Responsive viewport settings for mobile compatibility -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <!-- Page Title (Displayed in the browser tab) -->
     <title>Vite + React + TS</title>
   </head>
+
   <body>
+    <!-- Root container where the React app will be rendered -->
     <div id="root"></div>
+
+    <!-- Main JavaScript entry point (React application initialization) -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
